feat(mcq): replace banned phrases with specific consequences in 183 interview files
Replace generic banned phrases (Частая ошибка, Это антипаттерн, etc.) with
concrete failure scenarios across algorithms, Java, Kotlin, Go, Spring, testing,
architecture, AI/ML, cloud, API, monitoring, performance, data-engineering files.
Also add second MCQ pass for important questions in plan files (java-8, stream,
generics, rabbitmq, cassandra, distributed-systems, spring-mvc, clickhouse).
Fix structural corruptions in tries-interview.md (Q20-Q28 headings embedded in MCQ).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>